--- a/src/index.css
+++ b/src/index.css
@@ -12,15 +12,24 @@ code {
     monospace;
 }
 
-.battleView {
+.body {
   width: 100%;
   max-width: 1000px;
+}
+
+.battleView {
+  border: 1px solid #fff;
+  padding: 15px;
 }
 
 .pokemonCard {
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
+}
+
+.pokemonImage img{
+  width: 150px;
 }
 
 .pokemonCard .pokemonData {
@@ -97,4 +106,26 @@ code {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
+}
+
+.battleLogWrap {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.battleResult {
+  text-align: left;
+  margin-top: 50px;
+}
+
+.battleResult h4 {margin-bottom: 15px;}
+
+.battleLog {
+  border: 1px solid #fff;
+  padding: 15px 20px;
+  min-height: 100px;
+  flex: 1 1 auto;
+  margin-right: 50px;
 }
